2.1.2
-----
o Allow Cypher to use indexes to solve IN queries

2.1.0-M02
---------
o Add a new cost based planner
o To the new planner, added:
  - All nodes scan
  - Cartesian product
  - Apply
  - Relationship by id
  - Expand
  - Node by id
  - Node by label
  - Node by index seek
  - Hash join
  - Optional
  - Projection
  - Selection
  - SemiApply
  - Sort
  - Named paths
o Fix problem where LOAD CSV stops indexes from being used

2.1.0-M01
---------
o Add LOAD CSV
o Add USING PERIODIC COMMIT

2.0.5
-----
o Fixes problem where predicates are evaluated wrongly in NOT
o Fixes problem when WITH introduces a symbol that shadows an existing identifier

2.0.4
-----
o Adds UNWIND

2.0.3
-----
o MERGE must fail when trying to create 2 nodes with same id but different labels (e.g., MERGE (a: Foo)-[r:KNOWS]->(a: Bar))
o Allow Cypher split() with empty separator
o Ensure Cypher range() works with negative step values

2.0.2
-----
o Fixes #1897 - goes into never ending loop for some aggregate queries
o Add the functions toInt(...) and toFloat(...)
o Renames the Cypher type Double to Float
o Add the function split(...)
o Reading a non-existent property from a map returns null rather than failing
o MERGE will choose a direction when it has to create a relationship if you use an undirected relationship pattern
o Solves problem where non deterministic predicates where run too early

2.0.1
-----
o Fixes bug around MERGE inside a FOREACH inside a FOREACH
o Makes it possible to write MERGE queries with no already known parts
o Fixes problem with compiling queries with NOT expressions in them
o Fixes #1735 - Indexes and AND predicates produce wrong results
o Fixes #1876 - Null nodes and properties should be ignored when SETting properties
o Fixes problem with parser not being thread safe.
o Add support for double literals in exponent form
o Use internal heirarchy for types. Previously dependeded on Scala type hierarchy
o Fixes MERGE without any identifier previously known