@@ -124,6 +124,7 @@ The Neo4j Team""")
    */
   private def prepare = new Phase {
     def myBuilders: Seq[PlanBuilder] = Seq(
+      new UnwindBuilder,
       new LoadCSVBuilder,
       new PredicateRewriter,
       new KeyTokenResolver,
@@ -136,7 +137,6 @@ The Neo4j Team""")
 
   private def matching = new Phase {
     def myBuilders: Seq[PlanBuilder] = Seq(
-      new UnwindBuilder,
       new TraversalMatcherBuilder,
       new FilterBuilder,
       new NamedPathBuilder,
