@@ -1,6 +1,9 @@
 2.1.2
 -----
 o Allow Cypher to use indexes to solve IN queries
+o Fix problems where indexes where not picked up if multiple labels
+  where used on a pattern node
+o Fix problem where indexes where not picked up when a query uses UNWIND
 
 2.1.0-M02
 ---------
